# pyndex

./: .gitignore  README.md  config.test.toml  conftest.py  pyproject.toml  scratch.py
pyndex/: __init__.py  __main__.py  version.py
pyndex/common/: __init__.py  instance.py
pyndex/common/models/: __init__.py  auth.py  file_meta.py  package.py
pyndex/common/wrappers/: __init__.py  twine_wrap.py
pyndex/pyndex_api/: __init__.py  instance.py  util.py
pyndex/pyndex_api/operators/: __init__.py  base.py  group.py  package.py  user.py
pyndex/pyndex_client/: __init__.py
pyndex/pyndex_client/commands/: __init__.py  connection.py  group.py  package.py  permissions.py  user.py
pyndex/pyndex_client/models/: __init__.py  config.py  context.py
pyndex/pyndex_client/util/: __init__.py  alias.py
pyndex/pyndex_server/: __init__.py  cli.py  config.py  context.py
pyndex/pyndex_server/models/: __init__.py  auth.py  base.py  bootstrap.py  file_meta.py  package.py
pyndex/pyndex_server/routes/: __init__.py  files.py  group.py  meta.py  packages.py  pypi.py  user.py
test/test_package/: README.md  pyproject.toml
test_packages/pyndex_test/: README.md  pyproject.toml
tests/api/: test_basic.py  test_package.py  test_user.py
tests/server/: test_users.py
