[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyndex"
version = "0.0.1"
dependencies = [
    "twine",
    "pydantic"
]
requires-python = ">=3.12"
authors = [
  {name = "Dax Harris", email = "mvh3875@rit.edu"}
]
maintainers = [
  {name = "Dax Harris", email = "mvh3875@rit.edu"}
]
description = "Self-hosted pypi-compatible package index with deep package access permissioning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pypi", "packaging", "server", "cli", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

[project.optional-dependencies]
server = [
    "litestar",
    "tinydb"
]
client = [
    "click",
    "rich",
    "httpx"
]
test = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/iTecAI/pyndex"
Repository = "https://github.com/iTecAI/pyndex.git"