[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyndex"
version = "0.0.1"
dependencies = [
    "twine",
    "pydantic",
    "httpx",
    "validators",
    "tomlkit",
    "click"
]
requires-python = ">=3.12"
authors = [
  {name = "Dax Harris", email = "mvh3875@rit.edu"}
]
maintainers = [
  {name = "Dax Harris", email = "mvh3875@rit.edu"}
]
description = "Self-hosted pypi-compatible package index with deep package access permissioning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pypi", "packaging", "server", "cli", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

[project.optional-dependencies]
server = [
    "litestar[standard]",
    "hypercorn",
    "tinydb",
    "pyhumps"
]
client = [
    "rich",
    "platformdirs"
]
test = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/iTecAI/pyndex"
Repository = "https://github.com/iTecAI/pyndex.git"

[project.scripts]
pyndex = "pyndex:pyndex_client"
pyndex-server = "pyndex:launch_server"

[tool.pytest.ini_options]
markers = [
  "user: Request a user to be generated (called on the class level)",
  "group: Request a group to be generated (called on the class level)",
  "package: Request a package to be uploaded (called on the class level)"
]